@@ -1,3 +1,4 @@
+2/15/2021 DH: Added PC struct and fixed some bugs with save_dungeon
 2/14/2021 DH: Restructured room code in favor of using a struct and added dungeon_hardness and num_rooms writes in save_dungeon
 2/13/2021 DH: Added parallel 2d array for storing hardness factor
 2/12/2021 BN: Added create_player and cleaned up save and load tag setting
